[package]
name = "denver"
version = "0.1.0"
authors = ["sam raker <sam.raker@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://github.com/swizzard/denver"
repository = "https://github.com/swizzard/denver"
readme = "README.md"
keywords = ["dotenv", "environment"]
categories = ["config", "development-tools"]
description = "dotenv replacement that merges multiple .env files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
subprocess = "0.2.6"
