[package]
name = "denver"
version = "0.2.1"
authors = ["sam raker <sam.raker@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://github.com/swizzard/denver"
repository = "https://github.com/swizzard/denver"
readme = "README.md"
keywords = ["dotenv", "environment"]
categories = ["config", "development-tools"]
description = "dotenv replacement that merges multiple .env files"


[dependencies]
clap = "~2.33.3"
ctrlc = "3.2.0"
nix = "0.22.1"
subprocess = "0.2.6"
